--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,7 +2,7 @@ build.classes.excludes=**/*.java,**/*.form,**/.nbattrs
 build.dir=build
 build.generated.dir=${build.dir}/generated
 client.module.uri=Groepen-war
-client.urlPart=
+client.urlPart=/ctrl.do
 debug.classpath=${javac.classpath}::${jar.content.additional}:${run.classpath}
 display.browser=true
 dist.dir=dist
@@ -40,4 +40,5 @@ reference.ApplicationClient.j2ee-module-car=${project.ApplicationClient}/dist/Ap
 reference.Groepen-ejb.dist-ear=${project.Groepen-ejb}/dist/Groepen-ejb.jar
 reference.Groepen-war.dist-ear=${project.Groepen-war}/dist/Groepen-war.war
 resource.dir=setup
+run.classpath=
 source.root=.
