--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /Groepen-war/nbproject/private/
 /Groepen-ejb/nbproject/private/
 /ApplicationClient/nbproject/private/
+/ApplicationClient/build/
+/build/
+/ApplicationClient/dist/
+/Groepen-war/dist/
+/dist/
