--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,4 +40,5 @@ reference.ApplicationClient.j2ee-module-car=${project.ApplicationClient}/dist/Ap
 reference.Groepen-ejb.dist-ear=${project.Groepen-ejb}/dist/Groepen-ejb.jar
 reference.Groepen-war.dist-ear=${project.Groepen-war}/dist/Groepen-war.war
 resource.dir=setup
+run.classpath=
 source.root=.
