--- a/Groepen-war/web/WEB-INF/web.xml
+++ b/Groepen-war/web/WEB-INF/web.xml
@@ -25,6 +25,10 @@
             <role-name>student</role-name>
             <role-name>docent</role-name>
         </auth-constraint>
+        <user-data-constraint>
+            <description/>
+            <transport-guarantee>NONE</transport-guarantee>
+        </user-data-constraint>
     </security-constraint>
     <login-config>
         <auth-method>FORM</auth-method>
