--- a/Groepen-war/nbproject/project.properties
+++ b/Groepen-war/nbproject/project.properties
@@ -42,7 +42,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.Groepen-ejb.dist}
+    ${reference.Groepen-ejb.dist}:\
+    ${reference.GroepenLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -73,7 +74,9 @@ no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.Groepen-ejb=../Groepen-ejb
+project.GroepenLib=../GroepenLib
 reference.Groepen-ejb.dist=${project.Groepen-ejb}/dist/Groepen-ejb.jar
+reference.GroepenLib.jar=${project.GroepenLib}/dist/GroepenLib.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
